PredictNone is incorrectly treated as isDoublePrediction https://bugs.webkit.org/show_bug.cgi?id=80365

Reviewed by Filip Pizlo.

Also it is incorrectly treated as isFixedIndexedStorageObjectPrediction.

* bytecode/PredictedType.h:
(JSC::isFixedIndexedStorageObjectPrediction):
(JSC::isDoublePrediction):


Canonical link: https://commits.webkit.org/97503@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109865 268f45cc-cd09-0410-ab3c-d52691b4dbfc